2010-09-11  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Anders Carlsson.

        Attempt to fix Windows MiniBrowser build (untested)
        https://bugs.webkit.org/show_bug.cgi?id=45609

        * MiniBrowser/win/BrowserView.cpp:
        (runJavaScriptConfirm):
        (runJavaScriptPrompt):


Canonical link: https://commits.webkit.org/58049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67317 268f45cc-cd09-0410-ab3c-d52691b4dbfc