WebKitTools/MiniBrowser/win/BrowserView.cpp
@@ -62,10 +62,12 @@ static void runJavaScriptAlert(WKPageRef page, WKStringRef alertText, WKFrameRef
 
 static bool runJavaScriptConfirm(WKPageRef page, WKStringRef message, WKFrameRef frame, const void* clientInfo)
 {
+    return false;
 }
 
 static WKStringRef runJavaScriptPrompt(WKPageRef page, WKStringRef message, WKStringRef defaultValue, WKFrameRef frame, const void* clientInfo)
 {
+    return 0;
 }
 
 static void setStatusText(WKPageRef page, WKStringRef text, const void* clientInfo)
